// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonBar renders 1`] = `
<DocumentFragment>
  <div
    class="sc-gsnTZi ca-dGRo"
  >
    <a>
      One
    </a>
    <a>
      Two
    </a>
  </div>
</DocumentFragment>
`;

exports[`ButtonBar renders large size 1`] = `
<DocumentFragment>
  <div
    class="sc-gsnTZi duotqD"
  >
    <button>
      One
    </button>
    <button
      data-selected="true"
    >
      Two
    </button>
  </div>
</DocumentFragment>
`;

exports[`ButtonBar renders small size 1`] = `
<DocumentFragment>
  <div
    class="sc-gsnTZi hqrQBU"
  >
    <button>
      One
    </button>
    <button>
      Two
    </button>
  </div>
</DocumentFragment>
`;
